--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,13 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["import", "@typescript-eslint", "react", "prettier"],
+  "plugins": [
+    "import",
+    "@typescript-eslint",
+    "react",
+    "prettier",
+    "tailwindcss"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -25,6 +31,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended",
+    "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "rules": {
