--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/lines-between-class-members": "off",
-    "@typescript-eslint/no-throw-literal": "off"
+    "@typescript-eslint/no-throw-literal": "off",
+    "consistent-return": "off"
   }
 }
