--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/lines-between-class-members": "off",
     "@typescript-eslint/no-throw-literal": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "jsx-a11y/media-has-caption": "off"
   }
 }
