--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.6",
     "openvidu-browser": "^2.30.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
