Style: 옵션 버튼 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/require-default-props": "off",
     "@typescript-eslint/lines-between-class-members": "off",
     "@typescript-eslint/no-throw-literal": "off",
     "consistent-return": "off",
