Style: 오른쪽 info bar 컴포넌트 기본 스타일링

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
+    "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/lines-between-class-members": "off",
     "@typescript-eslint/no-throw-literal": "off",
     "consistent-return": "off",
