--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.8.0",
     "next": "14.2.6",
     "openvidu-browser": "^2.30.1",
     "react": "^18",
