--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     "consistent-return": "off",
     "jsx-a11y/media-has-caption": "off",
     "import/prefer-default-export": "off",
-    "jsx-a11y/control-has-associated-label": "off"
+    "jsx-a11y/control-has-associated-label": "off",
+    "no-param-reassign": "off"
   }
 }
