--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "semi": true,
   "singleQuote": true,
   "bracketSpacing": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 120
 }
