--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "import/prefer-default-export": "off",
     "jsx-a11y/control-has-associated-label": "off",
     "no-param-reassign": "off",
-    "no-nested-ternary": "off"
+    "no-nested-ternary": "off",
+    "import/no-cycle": "off"
   }
 }
